syntax = "proto3";

package rhosus_pb;
option go_package = "github.com/parasource/rhosus/rhosus/pb/rhosus_pb";

service RhosusService {
  rpc CreateEntry(CreateEntryRequest) returns (CreateEntryResponse);
  rpc AppendToEntry(AppendToEntryRequest) returns (AppendToEntryResponse);
  rpc DeleteEntry(DeleteEntryRequest) returns (DeleteEntryResponse);
}

message CreateEntryRequest {
  string uid = 1;
  string directory = 2;
  Entry entry = 3;
  repeated int32 signatures = 4;
}

message CreateEntryResponse {
  string error = 1;
}

message AppendToEntryRequest {
  string uid = 1;
  repeated FileChunk chunks = 2;
}

message AppendToEntryResponse {
  string error = 1;
}

message DeleteEntryRequest {
  string directory = 1;
  string uid = 2;
  repeated int32 signatures = 3;
}

message DeleteEntryResponse {
  string error = 1;
}

message Entry {
  string name = 1;
  repeated FileChunk chunks = 2;
  bytes content = 3;
}

message FileChunk {
  message FileKey {
    uint32 volume_id = 1;
    uint64 file_key = 2;
    fixed32 cookie = 3;
  }
  FileKey fkey = 1;
  string uid = 2;
  int64 size = 3;
  uint64 offset = 4;
  uint64 lastModifiedAt = 5;
}